Changes in official release 2.2.3 (??? 1999)

* Added support for StartFunction & ImagePath not to break new configurations.

* Fixed long-window-name-hangs-X bug.

Changes in official release 2.2.2 (May 1999)

* New "Emulate"  command  for independent  control of the  move/resize
* feedback window.

* EdgeThickness command can be issued at any time.

* Pan frames not created when not needed.

* Pan frames reach corners.

* Fixed window wandering on restart, recapture.

* International characters are accepted as input in FvwmForm.

* Fix bug in window shading that left one row of pixels visible.

* Fix to FvwmTaskbar so that  it won't loop  when  there are too  many
* buttons.

* Fix positioning bug on overlapping menus.

* Fix M4 command problem, Problem Reports 201 and 246.

* Fixed bug when calling a function without all args supplied.

* Miscellaneous bug fixes,  see ChangeLog for details.


Changes in official release 2.2 (February 1999)

Changes in beta release 2.1.13 (February 1999)

Changes in beta release 2.1.12 (February 1999)

* Enhanced and changed the syntax for menu position hints. If you use negative
  offsets you will have to change your configuration now.

Changes in beta release 2.1.11 (January 1999)

* Renamed MenuStyle options: PrepopMenus to PopupImmediately and
  PrepopMenusOff to PopupDelayed.

Changes in beta release 2.1.8 (January 1999)

* New options SidePic and SideColor to MenuStyle

* Configure generates a summary at the end of processing.  In particular
  this is useful to see if any of XPM, Readline, or RPlay are missing.

* Configure now looks in more places to find cpp.  If cpp can't be
  found, you will need to specify '-cppprog' if you use the FvwmCpp
  module.  A warning to this effect is printed at configure time.

* Configure now tries harder to ensure that XPM is the right version.

Changes in beta release 2.1.7 (December 1998)

* The SetMenuStyle command does not exist anymore. Its functionality has