@@ -10,5 +10,4 @@ HTML = cvs.html docs.html download.html features.html ftp.html index.html \
 	links.html mailinglist.html man-pages.html			  \
 	mod_changes.html mod_concept.html				  \
 	mod_f2m_communication.html mod_initialization.html		  \
-	mod_m2f_communication.html mod_security.html modules.html	  \
-	version.html
+	mod_m2f_communication.html mod_security.html modules.html
