@@ -9,7 +9,7 @@
 <h1><font color="pink">The Official FVWM Homepage - Downloads</font></h1>
 </center>
 <ul>
-  <li>Latest Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.tar.gz">2.2</a>
+  <li>Latest Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.3.tar.gz">2.2.3</a>
 <p>
   <li>Latest Beta Version: N/A
 <p>
