@@ -1,3 +1,7 @@
+1999-10-15  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* Makefile.am (HTML): removed version.html again
+
 1999-02-19  Dominik Vogt  <dominik_vogt@hp.com>
 
 	* download.html: updated for 2.2
